ImageViewerASP/Contents/horizontal-scrolling.css
* {
    margin: 0;
    padding: 0;
    font-family: Consolas, monospace;
}

body {
    background-color: #000;
    color: #fff;
}

.flex {
    display: flex;
    flex-direction: row-reverse;
}

.container.flex {
    overflow-x: scroll;
    overflow-y: hidden;
}

.container::-webkit-scrollbar {
    width: 0 !important;
    height: 0 !important;
}

img {
    display: block;
    max-height: 100vh;
    width: auto;
}

a.button {
    height: 100vh;
    text-decoration: none;
}

.button {
    opacity: 0.05;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 2em;
    background-color: rgba(0, 0, 0, 0);
    color: #fff;
}

.button:hover {
    opacity: 0.7;
    background-color: rgba(0, 0, 0, 1);
}

.button.prev,
.button.next {
    position: fixed;
    z-index: 2;
}

.button.prev {
    right: 0;
}

.button.next {
    left: 0;
}

